# celestial-ephemera

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  run.sh  update.sh
docs/: Concept.md
src/: CMakeLists.txt  app.cpp
src/osx/: bluetooth.h  bluetooth.mm  bluetoothObjc.h  bluetoothObjc.mm
support/xcode/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  celestial.xcscheme  install.xcscheme
